# message-board

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
board/: .coveragerc  db.sqlite3
board/board/: settings.py  urls.py
board/boardapp/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
board/boardapp/management/commands/: populate_db.py
board/boardapp/migrations/: 0001_initial.py  0002_data.py  0003_post_comment.py  0004_alter_category_options_alter_comment_options_and_more.py  0004_alter_comment_options.py
board/boardapp/templatetags/: custom_filters.py
board/boardapp/tests/: test_models.py  test_urls.py  test_utils.py  test_views.py
board/locale/ru/LC_MESSAGES/: django.po
board/static/js/: switch.js
board/templates/: home.html  newsletter_email.html  post_card.html  post_delete.html  post_detail.html  post_edit.html  post_list.html  post_list_user.html  reply_accept.html  reply_email.html  reply_list.html
board/templates/base/: base.html  filter.html  navbar.html  paginator.html
board/templates/users/: activation_email.html  login.html  profile.html  signup.html
board/users/: forms.py  models.py  tasks.py  urls.py  views.py
board/users/management/commands/: runapscheduler.py
board/users/migrations/: 0001_initial.py  0002_user_subscriber.py
board/users/tests/: test_models.py  test_tasks.py  test_views.py
